@@ -1,3 +1,7 @@
+2017-09-18  Richard Sandiford  <richard.sandiford@linaro.org>
+
+	* gfortran.dg/vect/mask-store-1.f90: New test.
+
 2017-09-18  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/45033
